# app/Http/Resources/ContatoResource.php
@@ -14,6 +14,12 @@ class ContatoResource extends JsonResource
      */
     public function toArray(Request $request): array
     {
-        return parent::toArray($request);
+        return [
+            'id' => $this->id,
+            'nome' => $this->nome,
+            'telefone' => $this->telefone,
+            'email' => $this->email,
+            'favorito' => $this->favorito,
+        ];
     }
 }
